# SoftwareArchitectureCLassApplication

./: CMakeLists.txt  README.md  SampleApplicationSolution.sln
AppLibrary/: BlockBuilder.h  CMakeLists.txt
AppPartOps/: CMakeLists.txt
AppsCore/: CMakeLists.txt  framework.h
AutomationBinding/: CMakeLists.txt
BadLibrariesExe/: CMakeLists.txt
BindingTests/: BindingTests.vcxproj  CMakeLists.txt  test.cpp
CoolDemandLoadedLibrary/: CMakeLists.txt
Core/: CMakeLists.txt  Core.cpp  Core.vcxproj  Core.vcxproj.filters  CoreExports.h  CoreSession.cpp  CoreUtiles.cpp  LibraryLoad.cpp  LibraryLoad.h  framework.h  windows.h
CoreUnitTest/: CMakeCache.txt  CMakeLists.txt  CMakeListscopyfile.txt  CoreUnitTest.vcxproj  Makefile  cmake_install.cmake  sqrt.cpp  sqrt_test.cpp  test.cpp
DataReader/: CMakeLists.txt
FeatureOpsUI/: CMakeLists.txt
JavaAutomationBinding/: CMakeLists.txt
JavaLoader/: CMakeLists.txt  framework.h
JournaledCPPFileProject/: CMakeLists.txt  SampleJournal.txt
Journaling/: CMakeLists.txt
PartOpsUI/: CMakeLists.txt
SAtests/: CMakeLists.txt  SAtests.vcxproj  test.cpp
UILibrary/: CMakeLists.txt
jniAutomationLibrary/: CMakeLists.txt
